adds slides to support exercises in lecture 1

--- a/lecture_1/Lecture 1 slides.ipynb
+++ b/lecture_1/Lecture 1 slides.ipynb
@@ -91,27 +91,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hej verden\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"hej verden\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -471,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -503,8 +482,9 @@
    },
    "source": [
     "## Program flow\n",
+    "* Printing\n",
     "* Boolean values\n",
-    "* Comparison operators\n",
+    "* Comparison \n",
     "* Conditions (if, else, elif)\n",
     "* while-loops\n",
     "* for-loops "
@@ -525,6 +505,169 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Printing to the console"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "###  Using f-string\n",
+    "Using f-strings in concidered the modern way of handling strings in python\n",
+    "[More about f-strings](https://docs.python.org/3/tutorial/inputoutput.html)\n",
+    "\n",
+    "F-strings elegantly handles variables in the string and has escape sequences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The guy called ' John doe' is 36 years old\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \" John doe\"\n",
+    "age = 36\n",
+    "print (f'The guy called \\'{name}\\' is {age} years old')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "f-strings also supports formatting of numbers and text:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pi is 3.141592653589793\n",
+      "pi with only 3 decimals: 3.142\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "pi = math.pi\n",
+    "print (f'pi is {pi}')\n",
+    "print (f'pi with only 3 decimals: {pi:.3f}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "strings can be handled as an array without any conversion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "J. Dow is the man!\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"John Dow\"\n",
+    "print(f'{name[0]}. {name[5:8]} is the man!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "You can also replace elements in the string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".-= weird names? =-.\n",
+      "\n",
+      "\n",
+      "Friederiik Tolunollunond Junounotilanoinen \n",
+      "& \n",
+      "eibiibie vanong\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"Frederik Tollund Juutilainen \\n& \\nebbe vang\"\n",
+    "print (\".-= weird names? =-.\\n\\n\")\n",
+    "print(name.\n",
+    "      replace('o', 'olu').\n",
+    "      replace('r', 'ri').\n",
+    "      replace('u', 'uno').\n",
+    "      replace('b','ibi').\n",
+    "      replace('a', 'ano'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "subslide"
     }
    },
@@ -534,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -589,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -602,7 +745,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -641,7 +784,7 @@
        "False"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -667,7 +810,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -693,7 +836,7 @@
        "False"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -791,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -827,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -836,10 +979,10 @@
    "outputs": [
     {
      "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-13-cc758a0ec60e>, line 2)",
+     "evalue": "expected an indented block (<ipython-input-10-cc758a0ec60e>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-cc758a0ec60e>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print('Number is higher than 2')\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-cc758a0ec60e>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print('Number is higher than 2')\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
@@ -999,15 +1142,7 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter the number 18\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "while True:\n",
     "    print('Enter the number 18')\n",
@@ -1462,13 +1597,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['cat', 'house', 'structure', 'rabbit']\n",
+      "['concrete', 'cat', 'house', 'structure', 'rabbit']\n"
+     ]
+    }
+   ],
    "source": [
     "a = ['cat', 'house', 'structure']\n",
     "a.append('rabbit') # insert last\n",
@@ -1490,13 +1634,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated animals list:  ['cat', 'dog', 'guinea pig']\n"
+     ]
+    }
+   ],
    "source": [
     "# animals list\n",
     "animals = ['cat', 'dog', 'rabbit', 'guinea pig']\n",
@@ -1521,9 +1673,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Return Value: French\n",
+      "Updated List: ['Python', 'Java', 'C++', 'C']\n"
+     ]
+    }
+   ],
    "source": [
     "# programming languages list\n",
     "languages = ['Python', 'Java', 'C++', 'French', 'C']\n",
@@ -1550,9 +1711,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rabbit\n",
+      "dog\n",
+      "horse\n",
+      "dolphin\n"
+     ]
+    }
+   ],
    "source": [
     "for animal in ['rabbit', 'dog','horse','dolphin']:\n",
     "    print(animal)"
@@ -1572,13 +1744,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shuffled: [9, 2, 3, 10, 4, 8, 7, 5, 1, 0, 6]\n",
+      "Sorted: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "a = [0,1,2,3,4,5,6,7,8,9,10]\n",
@@ -1644,13 +1825,6 @@
     "* Rock, paper, scissors?\n",
     "* Best out of three!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
