added info about exercises

--- a/lecture_1/Lecture 1 slides.ipynb
+++ b/lecture_1/Lecture 1 slides.ipynb
@@ -1493,7 +1493,8 @@
     "* Creating lists\n",
     "* Inserting, removing and changing elements\n",
     "* iterating through lists\n",
-    "* `len()` function"
+    "* `len()` function\n",
+    "* Sorting"
    ]
   },
   {
@@ -1771,6 +1772,11 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1810,7 +1816,16 @@
     }
    },
    "source": [
-    "### Exercise!"
+    "### Exercise!\n",
+    "[We will be working on exercise from 'google python class'](https://developers.google.com/edu/python/)\n",
+    "\n",
+    "The Google Python Class is written for Python2 - Python3 is not the same as Python2 but we in this case it is only one difference: the print statements!\n",
+    "\n",
+    "python2 syntax: ```print \"hello world\"```\n",
+    "\n",
+    "python3 syntax: ```print(\"hello world)```\n",
+    "\n",
+    "Just add bracets and you have converted the code to python3!"
    ]
   },
   {
@@ -1822,8 +1837,10 @@
    },
    "source": [
     "# Exercise for next time\n",
-    "* Rock, paper, scissors?\n",
-    "* Best out of three!"
+    "## This is meant as an exercise to sharpen you python skills \n",
+    "\n",
+    "* Create a number guessing game\n",
+    "* the game pick a random number and answer higher or lower until you guess the exact number"
    ]
   }
  ],
