typo and clear outputs

--- a/lecture_1/Lecture 1 slides.ipynb
+++ b/lecture_1/Lecture 1 slides.ipynb
@@ -135,7 +135,7 @@
     }
    },
    "source": [
-    "A high-level language (HLL) is a programming language such as C, FORTRAN, or Pascal that enables a programmer to write programs that are more or less independent of a particular type of computer."
+    "A high-level language (HLL) is a programming language such as C, Javascript, or Java that enables a programmer to write programs that are more or less independent of a particular type of computer."
    ]
   },
   {
@@ -197,6 +197,17 @@
     "* Can do very complex things\n",
     "* Easy to learn\n",
     "* Well liked!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "Python is considered a scripting language, which means that it's often good for small tasks, minimal setup is required  and doesn't need a dedicated IDE."
    ]
   },
   {
@@ -280,21 +291,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, World!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Hello, World!')"
    ]
@@ -370,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -434,18 +437,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'list'>\n",
-      "<class 'bool'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## assigning a value to a variable\n",
     "x = [1, 2, 3]\n",
@@ -473,21 +467,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'int'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 2 # integer\n",
     "b = 2.0 # float\n",
@@ -552,21 +538,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The guy called ' John doe' is 36 years old\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "name = \" John doe\"\n",
     "age = 36\n",
@@ -586,22 +564,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pi is 3.141592653589793\n",
-      "pi with only 3 decimals: 3.142\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "pi = math.pi\n",
@@ -622,22 +591,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "J. Dow is the man!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "name = \"John Dow\"\n",
     "print(f'{name[0]}. {name[5:8]} is the man!')"
@@ -656,26 +617,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ".-= weird names? =-.\n",
-      "\n",
-      "\n",
-      "Friederiik Tolunollunond Junounotilanoinen \n",
-      "& \n",
-      "eibiibie vanong\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "name = \"Frederik Tollund Juutilainen \\n& \\nebbe vang\"\n",
     "print (\".-= weird names? =-.\\n\\n\")\n",
@@ -700,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -755,24 +703,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "[1, 2] == [1, 2]     # prints true\n",
     "[1, 3] != [1, 2]     # prints true\n",
@@ -794,24 +731,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = [1,2]\n",
     "b = [1,2]\n",
@@ -820,24 +746,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 1\n",
     "b = 1\n",
@@ -846,24 +761,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 257\n",
     "b = 257\n",
@@ -911,21 +815,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number is higher than 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 5\n",
     "if a > 2:\n",
@@ -957,22 +853,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number is higher than 2\n",
-      "... and number is higher than 4 too!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if a > 2:\n",
     "    print('Number is higher than 2')\n",
@@ -993,22 +880,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-10-cc758a0ec60e>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-cc758a0ec60e>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print('Number is higher than 2')\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if a > 2:\n",
     "print('Number is higher than 2')"
@@ -1621,22 +1499,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['cat', 'house', 'structure', 'rabbit']\n",
-      "['concrete', 'cat', 'house', 'structure', 'rabbit']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = ['cat', 'house', 'structure']\n",
     "a.append('rabbit') # insert last\n",
@@ -1658,21 +1527,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updated animals list:  ['cat', 'dog', 'guinea pig']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# animals list\n",
     "animals = ['cat', 'dog', 'rabbit', 'guinea pig']\n",
@@ -1697,18 +1558,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Return Value: French\n",
-      "Updated List: ['Python', 'Java', 'C++', 'C']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# programming languages list\n",
     "languages = ['Python', 'Java', 'C++', 'French', 'C']\n",
@@ -1735,20 +1587,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rabbit\n",
-      "dog\n",
-      "horse\n",
-      "dolphin\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for animal in ['rabbit', 'dog','horse','dolphin']:\n",
     "    print(animal)"
@@ -1768,22 +1609,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shuffled: [9, 2, 3, 10, 4, 8, 7, 5, 1, 0, 6]\n",
-      "Sorted: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "a = [0,1,2,3,4,5,6,7,8,9,10]\n",
