--- a/lecture_1/Lecture 1 slides.ipynb
+++ b/lecture_1/Lecture 1 slides.ipynb
@@ -1056,10 +1056,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Exercises - 30 min\n",
+    "# Exercises 1\n",
     "* Make a \"guess the number game\", where you break out of a `while` loop if the users guesses a number between 1 and 10. Use the code below:\n",
-    "* Make it between 1 and 100 and give feedback if the user is too high or too low:\n",
-    "* `TODO` extra exercise!"
+    "* Make it between 1 and 100 and give feedback if the user is too high or too low:"
    ]
   },
   {
@@ -1170,17 +1169,6 @@
     "    System.out.print(i);\n",
     "}\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Exercises?"
    ]
   },
   {
@@ -1364,7 +1352,7 @@
     }
    },
    "source": [
-    "#### Exercise\n",
+    "# Exercises 2\n",
     "* Iterate through all odd numbers between 5 and 27 using `range()`\n",
     "* Count from 1 to 10 using a `while`-loop and break out afterwards\n",
     "* Create a program that prints the letters of a word one-by-one\n",
@@ -1627,18 +1615,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
    "source": [
-    "#### Exercises\n",
+    "# Exercises 3\n",
     "* Create a list that contains all odd integers between 5 and 27\n",
     "* Create a function that returns a random entry from a list of countries\n",
     "* Create a function that accepts a list of integers and returns the largest number\n",
@@ -1667,11 +1650,116 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Dictionaries are unordered and are not accessed by the index but by their key. (like a dictionary!)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_dict = {\"a\": 2, \"b\": 2, \"c\": 3} # a dictionary is created\n",
+    "print(a_dict[\"b\"]) # accessing value at key \"b\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 2, 'b': 2, 'c': 3, 'd': 0}\n",
+      "{'a': 2, 'c': 3, 'd': 0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_dict[\"d\"] = 0 # inserting new element in dict\n",
+    "print(a_dict)\n",
+    "del a_dict[\"b\"] # delete\n",
+    "print(a_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "In dictionaries keys can only consist of immutable data types such as strings and integers, while the values can be lists, objects or dictionaries as seen in example below from [python-course.eu](https://www.python-course.eu/python3_dictionaries.php)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'en_de': {'red': 'rot', 'green': 'grün', 'blue': 'blau', 'yellow': 'gelb'},\n",
+       " 'de_fr': {'rot': 'rouge', 'grün': 'vert', 'blau': 'bleu', 'gelb': 'jaune'},\n",
+       " 'de_tr': {'rot': 'kırmızı', 'grün': 'yeşil', 'blau': 'mavi', 'gelb': 'jel'},\n",
+       " 'en_es': {'red': 'rojo',\n",
+       "  'green': 'verde',\n",
+       "  'blue': 'azul',\n",
+       "  'yellow': 'amarillo'}}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "en_de = {\"red\" : \"rot\", \"green\" : \"grün\", \"blue\" : \"blau\", \"yellow\":\"gelb\"}\n",
+    "de_fr = {\"rot\" : \"rouge\", \"grün\" : \"vert\", \"blau\" : \"bleu\", \"gelb\":\"jaune\"}\n",
+    "de_tr = {\"rot\": \"kırmızı\", \"grün\": \"yeşil\", \"blau\": \"mavi\", \"gelb\": \"jel\"}\n",
+    "en_es = {\"red\" : \"rojo\", \"green\" : \"verde\", \"blue\" : \"azul\", \"yellow\":\"amarillo\"}\n",
+    "\n",
+    "dictionaries = {\"en_de\" : en_de, \"de_fr\" : de_fr, \"de_tr\": de_tr, \"en_es\": en_es}\n",
+    "dictionaries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "### Exercise!\n",
+    "# Exercise!\n",
     "[We will be working on exercise from 'google python class'](https://developers.google.com/edu/python/)\n",
     "\n",
     "The Google Python Class is written for Python2 - Python3 is not the same as Python2 but we in this case it is only one difference: the print statements!\n",
@@ -1716,7 +1804,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
