--- a/lecture_1/Lecture 1 slides.ipynb
+++ b/lecture_1/Lecture 1 slides.ipynb
@@ -59,7 +59,7 @@
     }
    },
    "source": [
-    "We will be doing exercises in various formats and attempt with breakout rooms. These are experiments and we'd love to hear your feedback!"
+    "We will be doing exercises in various formats and attempt with breakout rooms. We are still experimenting and we'd love to hear what works and doesn't work for you."
    ]
   },
   {
@@ -76,8 +76,19 @@
     "* You will learn:\n",
     "    * Python\n",
     "    * Network Programming\n",
-    "    * Machine Learning\n",
+    "    * Basic Machine Learning\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "ML for inference and usage of trained models. Train models yourself using GUI tools"
    ]
   },
   {
@@ -214,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -275,7 +286,7 @@
     }
    },
    "source": [
-    "You have to get your hands dirty to learn this, which is why we'll add exercises and hand-ins for the course. It's your responsibility to ask questions if something doesn't make sense and we'll slow down and go through."
+    "You have to get your hands dirty to learn this, which is why we'll add exercises and hand-ins for the course. It's your responsibility to ask questions if something doesn't make sense and we'll slow down and go through it oncemore."
    ]
   },
   {
@@ -1659,21 +1670,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a_dict = {\"a\": 2, \"b\": 2, \"c\": 3} # a dictionary is created\n",
     "print(a_dict[\"b\"]) # accessing value at key \"b\""
@@ -1681,22 +1684,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'a': 2, 'b': 2, 'c': 3, 'd': 0}\n",
-      "{'a': 2, 'c': 3, 'd': 0}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a_dict[\"d\"] = 0 # inserting new element in dict\n",
     "print(a_dict)\n",
@@ -1717,30 +1711,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'en_de': {'red': 'rot', 'green': 'grün', 'blue': 'blau', 'yellow': 'gelb'},\n",
-       " 'de_fr': {'rot': 'rouge', 'grün': 'vert', 'blau': 'bleu', 'gelb': 'jaune'},\n",
-       " 'de_tr': {'rot': 'kırmızı', 'grün': 'yeşil', 'blau': 'mavi', 'gelb': 'jel'},\n",
-       " 'en_es': {'red': 'rojo',\n",
-       "  'green': 'verde',\n",
-       "  'blue': 'azul',\n",
-       "  'yellow': 'amarillo'}}"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "en_de = {\"red\" : \"rot\", \"green\" : \"grün\", \"blue\" : \"blau\", \"yellow\":\"gelb\"}\n",
     "de_fr = {\"rot\" : \"rouge\", \"grün\" : \"vert\", \"blau\" : \"bleu\", \"gelb\":\"jaune\"}\n",
