cleared exercises at last

--- a/lecture_1/Lecture 1 slides.ipynb
+++ b/lecture_1/Lecture 1 slides.ipynb
@@ -1135,13 +1135,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "[0, 5, 10, 15, 20, 25]\n"
+     ]
+    }
+   ],
    "source": [
     "# notice that we convert to lists below to see elements in the range\n",
     "print(list(range(10)))\n",
@@ -1163,9 +1173,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(5):\n",
     "    print(i)"
@@ -1215,13 +1237,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Executing code block!\n"
+     ]
+    }
+   ],
    "source": [
     "def my_function():\n",
     "    print('Executing code block!')\n",
@@ -1254,33 +1284,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Ebbe and Frederik\n"
+     ]
+    }
+   ],
    "source": [
-    "def print_name(name):\n",
-    "    print('Hello, ' + name)\n",
+    "def print_name(name_1, name_2):\n",
+    "    print(f'Hello {name_1} and {name_2}')\n",
     "    \n",
-    "print_name('Frederik')"
+    "print_name('Ebbe','Frederik')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Product is: 6\n"
+     ]
+    }
+   ],
    "source": [
     "def print_product(a, b):\n",
     "    product = a * b\n",
-    "    print('Product is: ' + product)\n",
+    "    print('Product is: ' + str(product))\n",
     "\n",
     "print_product(2,3)"
    ]
@@ -1310,19 +1356,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
-    "import random\n",
-    "\n",
     "def get_product(a, b):\n",
     "    return a * b\n",
-    "\n",
+    "  \n",
     "product = get_product(2,3)\n",
     "print(product)"
    ]
@@ -1340,13 +1392,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tails\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "\n",
@@ -1357,7 +1417,7 @@
     "    elif r == 1:\n",
     "        return 'tails'\n",
     "    \n",
-    "flip_coin()"
+    "print(flip_coin())"
    ]
   },
   {
@@ -1741,7 +1801,7 @@
     }
    },
    "source": [
-    "# Exercise!\n",
+    "# Exercise for next time!\n",
     "[We will be working on exercise from 'google python class'](https://developers.google.com/edu/python/)\n",
     "\n",
     "The Google Python Class is written for Python2 - Python3 is not the same as Python2 but we in this case it is only one difference: the print statements!\n",
@@ -1754,19 +1814,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Exercise for next time\n",
-    "## This is meant as an exercise to sharpen you python skills \n",
-    "\n",
-    "* Create a number guessing game\n",
-    "* the game pick a random number and answer higher or lower until you guess the exact number"
-   ]
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
