--- a/lecture_2/IDS_slides_lecture_2.ipynb
+++ b/lecture_2/IDS_slides_lecture_2.ipynb
@@ -2,20 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "unique-duplicate",
    "metadata": {},
    "source": [
     "# Interactive Digital Systems\n",
     "Lecture 2\n",
     "\n",
-    "## Low level networking with sockets and Threaded programming\n",
-    "\n",
-    "\n"
+    "## Low level networking with sockets and Threaded programming"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "tutorial-tobago",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -30,14 +26,12 @@
     "* Low level network programming using UDP & TCP\n",
     "* Using Packet Sender to test your applications \n",
     "\n",
-    "\n",
     "## Threaded programming\n",
-    "* doing things simultaneous e.g. sending and receiving packets :-)\n"
+    "* doing things simultaneous e.g. sending and receiving packets :-)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "viral-scene",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -49,7 +43,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "particular-exhibit",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -61,25 +54,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "constant-vacation",
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "verbing\n",
-      "  X  got: None expected: 'hailing'\n",
-      "  X  got: None expected: 'swimingly'\n",
-      "  X  got: None expected: 'do'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# D. verbing\n",
     "# Given a string, if its length is at least 3,\n",
@@ -101,14 +82,12 @@
     "\n",
     "print ('verbing')\n",
     "test(verbing('hail'), 'hailing')\n",
-    "test(verbing('swiming'), 'swimingly')\n",
-    "test(verbing('do'), 'do')\n",
-    "\n"
+    "test(verbing('swimming'), 'swimmingly')\n",
+    "test(verbing('do'), 'do')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "random-officer",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -127,7 +106,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "approved-object",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -139,7 +117,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ancient-research",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -151,7 +128,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "focused-vienna",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -164,7 +140,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "white-renaissance",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -187,7 +162,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unexpected-wealth",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -200,23 +174,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "extreme-finish",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "received message: b'sending this'\n",
-      "received message: b'sending this'\n",
-      "received message: b'sending this'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import socket\n",
     "\n",
@@ -233,7 +196,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daily-arthritis",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -248,7 +210,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stopped-namibia",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -270,7 +231,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "regulated-option",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -282,7 +242,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blocked-armstrong",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -295,7 +254,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "clinical-secretariat",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -318,7 +276,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "macro-extent",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -331,7 +288,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "central-placement",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -357,7 +313,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "martial-fields",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -372,7 +327,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hidden-hometown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -380,13 +334,12 @@
    },
    "source": [
     "# Threaded Programming in Python?\n",
-    "* What is threaded programming\n",
-    "* What can threads do for you and your applications"
+    "* What is threaded programming?\n",
+    "* What can threads do for you and your applications?"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "outside-paris",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -399,7 +352,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "three-little",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -415,15 +367,13 @@
     "    for nn in range(n):\n",
     "        print(random())\n",
     "        time.sleep(0.3)\n",
-    "  \n",
+    "        \n",
     "def countToN(n): \n",
     "    for nn in range(n):\n",
     "        print (nn)\n",
     "        time.sleep(1)\n",
     "        nn+=1\n",
     "\n",
-    "\n",
-    "  \n",
     "# creating thread \n",
     "t1 = threading.Thread(target=randomNumbers, args=(50,)) \n",
     "t2 = threading.Thread(target=countToN, args=(50,)) \n",
@@ -444,7 +394,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alike-render",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -458,7 +407,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "static-world",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -481,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
