--- a/lecture_2/IDS_slides_lecture_2.ipynb
+++ b/lecture_2/IDS_slides_lecture_2.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "special-macedonia",
    "metadata": {},
    "source": [
     "# Interactive Digital Systems\n",
@@ -12,6 +13,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "charming-integer",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -32,6 +34,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "afraid-wiring",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -43,6 +46,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "enclosed-violence",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -55,6 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "alive-texture",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -88,6 +93,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "faced-dancing",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -106,6 +112,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "optical-leisure",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -117,6 +124,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "editorial-shell",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -128,6 +136,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "recovered-matrix",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# PIP\n",
+    "**P**acket **I**nstaller for **P**ython"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "broad-adams",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -140,6 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "silver-saturday",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -162,6 +185,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "periodic-quantum",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -174,6 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "excess-cartoon",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -196,6 +221,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "north-prize",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -210,6 +236,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "increasing-petite",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -231,6 +258,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "delayed-journey",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -242,6 +270,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "excited-promotion",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -254,6 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "greenhouse-innocent",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -276,6 +306,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "sought-verse",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -288,6 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "prostate-stack",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -313,6 +345,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "differential-athens",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -327,6 +360,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "focal-crisis",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -340,6 +374,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "lovely-enclosure",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -352,6 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "nervous-tackle",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -394,6 +430,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "personalized-manchester",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -407,6 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "incorporated-humanitarian",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -429,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
